--- a/TrabajoFinalTIC/TrabajoFinalTIC/css/estilo.css
+++ b/TrabajoFinalTIC/TrabajoFinalTIC/css/estilo.css
@@ -6,7 +6,7 @@ body {
 
 #titulo{
 	font-family: 'Bebas Neue', cursive;
-	color: #71E63D;
+	color: #079723;
 	background: #EBFAA5;
 }
 
@@ -55,7 +55,7 @@ div.a {
 }
 
 a:link {
-  color: #265301;
+  color: #3200EB;
 }
 
 a:visited {
@@ -64,7 +64,7 @@ a:visited {
 
 a:hover {
   border-bottom: 1px solid;
-  background: #CDFEAA;
+  background: #EB01DA;
 }
 
 #titgeo{
@@ -127,12 +127,16 @@ a:hover {
 	font-family: 'Lobster', cursive;
 }
 	
-#tema{
-	background; #14FA6A;
+
+
+.al{
+	font-family: 'Bebas Neue', cursive;
+	color:#EB0706;
+	background: #5BE625;
 }
 
-#al{
-	font-family: 'Bebas Neue', cursive;
-}
+.creat{
+	background: #F06426;
+}	
 
 	
