--- a/TrabajoFinalTIC/TrabajoFinalTIC/css/estilo.css
+++ b/TrabajoFinalTIC/TrabajoFinalTIC/css/estilo.css
@@ -130,8 +130,8 @@ a:hover {
 
 
 .al{
-	font-family: 'Bebas Neue', cursive;
-	color:#EB0706;
+	font-family: 'Roboto Flex', sans-serif;
+	color:#0107FA;
 	background: #5BE625;
 }
 
